fixed one more thing with spacing question

--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ footer {
     text-align: left;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 20px;
+    margin-top: 0px;
     font-weight: bold;
 }
 
